--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1
+        if: GitHub.event_name != 'pull_request'
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -23,22 +24,29 @@ jobs:
         uses: docker/metadata-action@v3
         id: meta
         with:
-          images: |
-            otherguy/nextcloud-cleanup
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/nextcloud-cleanup
+          tags: |
+            type=raw,value=latest,enable=${{ endsWith(GitHub.ref, 'main') }}
+            type=ref,event=tag
+            type=sha
+            type=semver,pattern={{version}}
+          flavor: |
+            latest=false
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: true
+          push: ${{ GitHub.event_name != 'pull_request' }}
+          context: .
+          file: Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
           build-args: |
             BUILD_DATE=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}
             VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
             VCS_REF=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
-          images: |
-            otherguy/nextcloud-cleanup
-          tags: |
-            # minimal (short sha)
-            type=sha
+          tags: ${{ steps.meta.outputs.tags }}
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/nextcloud-cleanup
+
       # - name: Send GitHub Action data to Slack
       #   uses: act10ns/slack@v1.2.2
       #   env:
