--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
-
+# S3 configuration
 AWS_DEFAULT_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_BUCKET=
 AWS_ENDPOINT=
 
+# Database configuration
 DATABASE_HOST=
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_NAME=
 
-DELETION_GRACE_PERIOD=2486400
+DELETION_GRACE_PERIOD=86400
 NEXTCLOUD_FILENAME_PATTERN=urn:oid:%d
